<resources>
    <string name="app_name">AdminApp</string>

    <string name="req1">Select Your Role</string>
    <string name="req2">I agree to the Terms of Services and Privacy Policy</string>
    <string name="logo_des">Logo</string>
    <string name="q1">Don\'t have an account?</string>
    <string name="r_manager">Restaurant Manager</string>
    <string name="r_customer">Customer</string>
    <string name="r_admin">Admin</string>
    <string name="r_db">Delivery Rider</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hint1">Enter Your Email Address here</string>
    <string name="hint2">Enter Your password here</string>
    <string name="role_selection">Select Your Role:</string>
    <string name="greet1">Welcome to Restaurant Manager Dashboard</string>
    <string name="manager_op1">Manage Administrator Profiles</string>
    <string name="manager_op2">Manage My Profile</string>
    <string name="manager_op3">Income Report</string>
    <string name="log_out">Log Out</string>
    <string name="update_manager">Update Profile</string>
    <string name="delete_manager">Delete Profile</string>
    <string name="com_update">Update</string>
    <string name="com_delete">Delete</string>
    <string name="com_view">View Administrator Profiles</string>
    <string name="add_admin">Add an Administrator</string>
    <string name="rem_admin">Remove an Administrator</string>
    <string name="rem">Remove</string>
    <string name="add">Add</string>
    <string name="admin_req1">Enter Administrator Email Address</string>
    <string name="admin_req2">Enter Administrator Password</string>
    <string name="view_head">All Administrator Profiles</string>
    <string name="income_head">Income Report</string>
</resources>